--- a/src/final.html
+++ b/src/final.html
@@ -40,7 +40,7 @@
           font-weight: bold;
         "
       >
-        Guillaume SANCHEZ
+        Kévin RIZZO
       </h1>
       <h2
         style="
@@ -51,7 +51,7 @@
           margin: 5px 0 18px;
         "
       >
-        CEO & Digital Architect
+        Développeur front-end
       </h2>
       <div
         class="coordonnees"
@@ -86,7 +86,7 @@
             text-align: left;
           "
         >
-          0972373780 – 0613562123
+          0972373780
         </p>
       </div>
       <div
@@ -122,7 +122,7 @@
             text-align: left;
           "
         >
-          guillaume@market-academy.com
+          kevin@market-academy.com
         </p>
       </div>
       <div
