--- a/src/final.html
+++ b/src/final.html
@@ -1,209 +1,29 @@
-<br />
-<div
-  id="root"
-  style="
-    direction: rtl;
-    font-family: Verdana, sans-serif;
-    font-size: 13px;
-    color: #364043;
-    margin: 10px;
-    max-width: 750px;
-    min-width: 260px;
-  "
->
-  <div
-    class="block-right"
-    style="
-      display: inline-block;
-      vertical-align: top;
-      direction: ltr;
-      min-width: 56%;
-      max-width: 100%;
-      width: calc((480px - 100%) * 480);
-    "
-  >
-    <img
-      class="logo"
-      src="https://drive.google.com/uc?id=1JBuxvpegJ4azdfozHd9dGRXDuD16JCfU"
-      alt="Logo Market Academy"
-      style="height: auto; display: block; max-width: 130px; margin-left: auto"
-    />
+<br>
+<div id="root" style="direction: rtl; font-family: Verdana, sans-serif; font-size: 13px; color: #364043; margin: 10px; max-width: 580px; min-width: 260px;">
+  <div class="block-right" style="display: inline-block; direction: ltr; max-width: 100%; width: calc((480px - 100%) * 480); vertical-align: top; min-width: 64%;">
+    <img class="logo" src="https://drive.google.com/uc?id=133ygwtc500dywc_HDwUWwzap6ofqlRV5" alt="Logo Market Academy" style="height: auto; display: block; max-width: 150px; margin-left: auto;">
     <div>
-      <h1
-        style="
-          margin: 0;
-          padding: 0;
-          text-align: left;
-          margin-top: 10px;
-          color: #438094;
-          font-size: 22px;
-          font-weight: bold;
-        "
-      >
-        Kévin RIZZO
-      </h1>
-      <h2
-        style="
-          padding: 0;
-          text-align: left;
-          font-size: 12px;
-          font-weight: bold;
-          margin: 5px 0 18px;
-        "
-      >
-        Développeur front-end
-      </h2>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
-          alt="icone téléphone"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          0972373780
-        </p>
+      <h1 style="margin: 0; padding: 0; text-align: left; margin-top: 10px; color: #438094; font-size: 22px; font-weight: bold;">Guillaume SANCHEZ</h1>
+      <h2 style="padding: 0; text-align: left; font-size: 12px; font-weight: bold; margin: 5px 0 18px;">CEO & Digital Architect</h2>
+      <div class="coordonnees" style="direction: ltr; width: 100%; margin-bottom: 5px; text-align: left;">
+        <img class="icon" src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e" alt="icone téléphone" width="16" style="height: auto; max-width: 100%; display: inline-block; width: 16px; margin-right: 5px; vertical-align: middle;">
+        <p style="margin: 0; padding: 0; direction: ltr; display: inline-block; line-height: 16px; text-align: left;">0972373780 – 0613562123</p>
       </div>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy"
-          alt="icone email"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          kevin@market-academy.com
-        </p>
+      <div class="coordonnees" style="direction: ltr; width: 100%; margin-bottom: 5px; text-align: left;">
+        <img class="icon" src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy" alt="icone email" width="16" style="height: auto; max-width: 100%; display: inline-block; width: 16px; margin-right: 5px; vertical-align: middle;">
+        <p style="margin: 0; padding: 0; direction: ltr; display: inline-block; line-height: 16px; text-align: left;">guillaume@market-academy.com</p>
       </div>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
-          alt="icone curseur"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          www.market-academy.com
-        </p>
+      <div class="coordonnees" style="direction: ltr; width: 100%; margin-bottom: 5px; text-align: left;">
+        <img class="icon" src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v" alt="icone curseur" width="16" style="height: auto; max-width: 100%; display: inline-block; width: 16px; margin-right: 5px; vertical-align: middle;">
+        <p style="margin: 0; padding: 0; direction: ltr; display: inline-block; line-height: 16px; text-align: left;">www.market-academy.com</p>
       </div>
-      <p
-        class="services"
-        style="
-          margin: 0;
-          padding: 0;
-          color: #438094;
-          font-size: 11px;
-          font-weight: bold;
-          text-align: right;
-          margin-top: 18px;
-          margin-left: auto;
-          max-width: 370px;
-          line-height: 16px;
-        "
-      >
-        Marketing Digital – UX & UI – Business App – Blockchain – Applications
-        mobiles – Embedded & IOT – Cloud & DevOps
+      <p class="services" style="margin: 0; padding: 0; color: #438094; font-size: 11px; font-weight: bold; text-align: left; margin-top: 18px; line-height: 16px;">
+        Marketing Digital – UX & UI – Business App – Blockchain –
+        Applications mobiles – Embedded & IOT – Cloud & DevOps
       </p>
     </div>
   </div>
-  <div
-    class="block-left"
-    style="
-      display: inline-block;
-      vertical-align: top;
-      direction: ltr;
-      min-width: 40%;
-      max-width: 100%;
-      width: calc((480px - 100%) * 480);
-      margin-right: 10px;
-    "
-  >
-    <img
-      class="illustration"
-      src="https://drive.google.com/uc?id=1DZHripN9SlZGGspoaxJETFLbajBSmKy0"
-      alt="Illustration"
-      style="
-        height: auto;
-        width: 100%;
-        max-width: 290px;
-        margin: 0 auto;
-        display: block;
-      "
-    />
+  <div class="block-left" style="display: inline-block; direction: ltr; max-width: 100%; width: calc((480px - 100%) * 480); min-width: 33%; margin-right: 10px; vertical-align: bottom;">
+    <img class="illustration" src="https://drive.google.com/uc?id=1DZHripN9SlZGGspoaxJETFLbajBSmKy0" alt="Illustration" style="height: auto; width: 100%; max-width: 290px; margin: 0 auto; margin-top: auto; display: block;">
   </div>
 </div>
