--- a/src/index.html
+++ b/src/index.html
@@ -1,209 +1,181 @@
-<br />
-<div
-  id="root"
-  style="
-    direction: rtl;
-    font-family: Verdana, sans-serif;
-    font-size: 13px;
-    color: #364043;
-    margin: 10px;
-    max-width: 750px;
-    min-width: 260px;
-  "
->
-  <div
-    class="block-right"
-    style="
-      display: inline-block;
-      vertical-align: top;
-      direction: ltr;
-      min-width: 56%;
-      max-width: 100%;
-      width: calc((480px - 100%) * 480);
-    "
-  >
-    <img
-      class="logo"
-      src="https://drive.google.com/uc?id=1JBuxvpegJ4azdfozHd9dGRXDuD16JCfU"
-      alt="Logo Market Academy"
-      style="height: auto; display: block; max-width: 130px; margin-left: auto"
-    />
-    <div>
-      <h1
-        style="
-          margin: 0;
-          padding: 0;
-          text-align: left;
-          margin-top: 10px;
-          color: #438094;
-          font-size: 22px;
-          font-weight: bold;
-        "
-      >
-        Sophie ROCCO
-      </h1>
-      <h2
-        style="
-          padding: 0;
-          text-align: left;
-          font-size: 12px;
-          font-weight: bold;
-          margin: 5px 0 18px;
-        "
-      >
-        Marketing & Project Director
-      </h2>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
-          alt="icone téléphone"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          0972373780 – 0626643202
-        </p>
-      </div>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy"
-          alt="icone email"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          sophie@market-academy.com
-        </p>
-      </div>
-      <div
-        class="coordonnees"
-        style="
-          direction: ltr;
-          width: 100%;
-          margin-bottom: 5px;
-          text-align: left;
-        "
-      >
-        <img
-          class="icon"
-          src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
-          alt="icone curseur"
-          style="
-            height: auto;
-            max-width: 100%;
-            display: inline-block;
-            width: 16px;
-            margin-right: 5px;
-            vertical-align: middle;
-          "
-          width="16"
-        />
-        <p
-          style="
-            margin: 0;
-            padding: 0;
-            direction: ltr;
-            display: inline-block;
-            line-height: 16px;
-            text-align: left;
-          "
-        >
-          www.market-academy.com
-        </p>
-      </div>
-      <p
-        class="services"
-        style="
-          margin: 0;
-          padding: 0;
-          color: #438094;
-          font-size: 11px;
-          font-weight: bold;
-          text-align: right;
-          margin-top: 18px;
-          margin-left: auto;
-          max-width: 370px;
-          line-height: 16px;
-        "
-      >
-        Marketing Digital – UX & UI – Business App – Blockchain – Applications
-        mobiles – Embedded & IOT – Cloud & DevOps
-      </p>
-    </div>
-  </div>
-  <div
-    class="block-left"
-    style="
-      display: inline-block;
-      vertical-align: top;
-      direction: ltr;
-      min-width: 40%;
-      max-width: 100%;
-      width: calc((480px - 100%) * 480);
-      margin-right: 10px;
-    "
-  >
-    <img
-      class="illustration"
-      src="https://drive.google.com/uc?id=1DZHripN9SlZGGspoaxJETFLbajBSmKy0"
-      alt="Illustration"
-      style="
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Signature email MA</title>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <style>
+      html,
+      body,
+      p,
+      h1,
+      h2 {
+        margin: 0;
+        padding: 0;
+        text-align: left;
+      }
+      body {
+        margin: 0 auto;
+      }
+      h1,
+      h2 {
+        font-size: 100%;
+        font-weight: normal;
+      }
+      img {
+        height: auto;
+        max-width: 100%;
+      }
+
+      #root {
+        direction: rtl;
+        font-family: Verdana, sans-serif;
+        font-size: 13px;
+        color: #364043;
+        margin: 10px;
+        max-width: 580px;
+        min-width: 260px;
+      }
+
+      .block-left,
+      .block-right {
+        display: inline-block;
+        direction: ltr;
+        max-width: 100%;
+        width: calc((480px - 100%) * 480);
+      }
+
+      .block-left {
+        min-width: 33%;
+        margin-right: 10px;
+        vertical-align: bottom;
+      }
+
+      .block-right {
+        vertical-align: top;
+        min-width: 64%;
+      }
+
+      h1 {
+        margin-top: 10px;
+        color: #438094;
+        font-size: 22px;
+        font-weight: bold;
+      }
+
+      h2 {
+        font-size: 12px;
+        font-weight: bold;
+        margin: 5px 0 18px;
+      }
+
+      .logo {
+        height: auto;
+        display: block;
+        max-width: 150px;
+        margin-left: auto;
+      }
+
+      .coordonnees {
+        direction: ltr;
+        width: 100%;
+        margin-bottom: 5px;
+        text-align: left;
+      }
+
+      .coordonnees p {
+        margin: 0;
+        padding: 0;
+        direction: ltr;
+        display: inline-block;
+        line-height: 16px;
+        text-align: left;
+      }
+
+      .icon {
+        height: auto;
+        max-width: 100%;
+        display: inline-block;
+        width: 16px;
+        margin-right: 5px;
+        vertical-align: middle;
+      }
+
+      .services {
+        margin: 0;
+        padding: 0;
+        color: #438094;
+        font-size: 11px;
+        font-weight: bold;
+        text-align: left;
+        margin-top: 18px;
+        line-height: 16px;
+      }
+
+      .illustration {
         height: auto;
         width: 100%;
         max-width: 290px;
         margin: 0 auto;
+        margin-top: auto;
         display: block;
-      "
-    />
-  </div>
-</div>
+      }
+    </style>
+  </head>
+  <body>
+    <br />
+    <div id="root">
+      <div class="block-right">
+        <img
+          class="logo"
+          src="https://drive.google.com/uc?id=133ygwtc500dywc_HDwUWwzap6ofqlRV5"
+          alt="Logo Market Academy"
+        />
+        <div>
+          <h1>Sophie ROCCO</h1>
+          <h2>Marketing & Project Director</h2>
+          <div class="coordonnees">
+            <img
+              class="icon"
+              src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
+              alt="icone téléphone"
+              width="16"
+            />
+            <p>0972373780 – 0626643202</p>
+          </div>
+          <div class="coordonnees">
+            <img
+              class="icon"
+              src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy"
+              alt="icone email"
+              width="16"
+            />
+            <p>sophie@market-academy.com</p>
+          </div>
+          <div class="coordonnees">
+            <img
+              class="icon"
+              src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
+              alt="icone curseur"
+              width="16"
+            />
+            <p>www.market-academy.com</p>
+          </div>
+          <p class="services">
+            Marketing Digital – UX & UI – Business App – Blockchain –
+            Applications mobiles – Embedded & IOT – Cloud & DevOps
+          </p>
+        </div>
+      </div>
+      <div class="block-left">
+        <img
+          class="illustration"
+          src="https://drive.google.com/uc?id=1DZHripN9SlZGGspoaxJETFLbajBSmKy0"
+          alt="Illustration"
+        />
+      </div>
+    </div>
+  </body>
+</html>
