Add table structure

--- a/src/index.html
+++ b/src/index.html
@@ -1,181 +1,288 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signature email MA</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <style>
-      html,
-      body,
-      p,
-      h1,
-      h2 {
-        margin: 0;
-        padding: 0;
-        text-align: left;
-      }
-      body {
-        margin: 0 auto;
-      }
-      h1,
-      h2 {
-        font-size: 100%;
-        font-weight: normal;
-      }
-      img {
-        height: auto;
-        max-width: 100%;
-      }
-
-      #root {
-        direction: rtl;
-        font-family: Verdana, sans-serif;
-        font-size: 13px;
-        color: #364043;
-        margin: 10px;
-        max-width: 580px;
-        min-width: 260px;
-      }
-
-      .block-left,
-      .block-right {
-        display: inline-block;
-        direction: ltr;
-        max-width: 100%;
-        width: calc((480px - 100%) * 480);
-      }
-
-      .block-left {
-        min-width: 33%;
-        margin-right: 10px;
-        vertical-align: bottom;
-      }
-
-      .block-right {
-        vertical-align: top;
-        min-width: 64%;
-      }
-
-      h1 {
-        margin-top: 10px;
-        color: #438094;
-        font-size: 22px;
-        font-weight: bold;
-      }
-
-      h2 {
-        font-size: 12px;
-        font-weight: bold;
-        margin: 5px 0 18px;
-      }
-
-      .logo {
-        height: auto;
-        display: block;
-        max-width: 150px;
-        margin-left: auto;
-      }
-
-      .coordonnees {
-        direction: ltr;
-        width: 100%;
-        margin-bottom: 5px;
-        text-align: left;
-      }
-
-      .coordonnees p {
-        margin: 0;
-        padding: 0;
-        direction: ltr;
-        display: inline-block;
-        line-height: 16px;
-        text-align: left;
-      }
-
-      .icon {
-        height: auto;
-        max-width: 100%;
-        display: inline-block;
-        width: 16px;
-        margin-right: 5px;
-        vertical-align: middle;
-      }
-
-      .services {
-        margin: 0;
-        padding: 0;
-        color: #438094;
-        font-size: 11px;
-        font-weight: bold;
-        text-align: left;
-        margin-top: 18px;
-        line-height: 16px;
-      }
-
-      .illustration {
-        height: auto;
-        width: 100%;
-        max-width: 290px;
-        margin: 0 auto;
-        margin-top: auto;
-        display: block;
-      }
-    </style>
-  </head>
-  <body>
-    <br />
-    <div id="root">
-      <div class="block-right">
+<br />
+<table
+  cellpadding="0"
+  cellspacing="0"
+  border="0"
+  style="
+    border-spacing: 0px;
+    border-collapse: collapse;
+    color: rgb(68, 68, 68);
+    width: 550px;
+    font-size: 10pt;
+    font-family: Verdana, sans-serif;
+  "
+>
+  <tbody style="box-sizing: border-box">
+    <tr style="box-sizing: border-box">
+      <td
+        valign="top"
+        style="
+          box-sizing: border-box;
+          padding: 0px;
+          width: 200px;
+          font-size: 10pt;
+          vertical-align: top;
+        "
+      >
         <img
-          class="logo"
-          src="https://drive.google.com/uc?id=133ygwtc500dywc_HDwUWwzap6ofqlRV5"
-          alt="Logo Market Academy"
+          alt="photograph"
+          width="200"
+          border="0"
+          src="https://drive.google.com/uc?id=1qfUqD3LkpLqtIKWBCvLW0mHRiucuEW4V"
+          style="
+            box-sizing: border-box;
+            border: 0px;
+            vertical-align: middle;
+            height: auto;
+            width: 200px;
+          "
         />
-        <div>
-          <h1>Sophie ROCCO</h1>
-          <h2>Marketing & Project Director</h2>
-          <div class="coordonnees">
-            <img
-              class="icon"
-              src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
-              alt="icone téléphone"
-              width="16"
-            />
-            <p>0972373780 – 0626643202</p>
-          </div>
-          <div class="coordonnees">
-            <img
-              class="icon"
-              src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy"
-              alt="icone email"
-              width="16"
-            />
-            <p>sophie@market-academy.com</p>
-          </div>
-          <div class="coordonnees">
-            <img
-              class="icon"
-              src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
-              alt="icone curseur"
-              width="16"
-            />
-            <p>www.market-academy.com</p>
-          </div>
-          <p class="services">
-            Marketing Digital – UX & UI – Business App – Blockchain –
-            Applications mobiles – Embedded & IOT – Cloud & DevOps
-          </p>
-        </div>
-      </div>
-      <div class="block-left">
-        <img
-          class="illustration"
-          src="https://drive.google.com/uc?id=1DZHripN9SlZGGspoaxJETFLbajBSmKy0"
-          alt="Illustration"
+      </td>
+      <td
+        valign="top"
+        style="
+          box-sizing: border-box;
+          padding: 0px;
+          width: 300px;
+          font-size: 9pt;
+          vertical-align: top;
+        "
+      >
+        <p style="box-sizing: border-box; margin: 0px 0px 8px">
+          <span
+            style="
+              box-sizing: border-box;
+              font-size: 16pt;
+              color: rgb(67, 128, 148);
+              font-weight: 700;
+              line-height: 34px;
+            "
+          >
+            Sophie ROCCO
+          </span>
+          <br style="box-sizing: border-box" />
+          <span
+            style="
+              box-sizing: border-box;
+              font-size: 9pt;
+              color: rgb(54, 64, 67);
+              font-weight: 400;
+            "
+          >
+            Marketing &amp; Project Director
+          </span>
+          <br style="box-sizing: border-box" />
+        </p>
+
+        <hr
+          style="
+            box-sizing: border-box;
+            border-top: 2px solid rgb(67, 128, 148);
+            margin: 8px 0;
+          "
         />
-      </div>
-    </div>
-  </body>
-</html>
+
+        <p
+          style="
+            box-sizing: border-box;
+            margin: 0px 0px 0px;
+            font-size: 9pt;
+            color: rgb(67, 128, 148);
+          "
+        >
+          <a
+            href="https://www.market-academy.com/marketing-digital"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Marketing Digital
+          </a>
+          -
+          <a
+            href="https://www.market-academy.com/applications-mobiles"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Applications mobiles
+          </a>
+          -
+          <a
+            href="https://www.market-academy.com/blockchain"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Blockchain
+          </a>
+        </p>
+
+        <p
+          style="
+            box-sizing: border-box;
+            margin: 0px 0px 14px;
+            font-size: 9pt;
+            color: rgb(67, 128, 148);
+          "
+        >
+          <a
+            href="https://www.market-academy.com/business-apps"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Business App
+          </a>
+          -
+          <a
+            href="https://www.market-academy.com/embedded-et-iot"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Embedded &amp; IOT
+          </a>
+          -
+          <a
+            href="https://www.market-academy.com/cloud-et-devops"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(67, 128, 148);
+              text-decoration-line: none;
+            "
+          >
+            Cloud &amp; Devops</a
+          >...
+        </p>
+
+        <p
+          style="
+            box-sizing: border-box;
+            margin: 0px 0px 4px;
+            padding: 0px;
+            font-size: 10pt;
+            line-height: 12pt;
+          "
+        >
+          <img
+            src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
+            alt="icone téléphone"
+            width="14"
+            style="width: 14px; vertical-align: middle; margin-right: 2px"
+          />
+          0972373780 - 0626643202
+        </p>
+
+        <p
+          style="
+            box-sizing: border-box;
+            margin: 0px 0px 4px;
+            padding: 0px;
+            font-size: 10pt;
+            line-height: 12pt;
+          "
+        >
+          <img
+            src="https://drive.google.com/uc?id=1iS9y5Qx2zh74RjCTTPCm3LqFjNpZwpXy"
+            alt="icone email"
+            width="14"
+            style="width: 14px; vertical-align: middle; margin-right: 2px"
+          />
+          <a
+            href="mailto:sophie@market-academy.com"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(54, 64, 67);
+              text-decoration-line: none;
+              font-size: 10pt;
+            "
+          >
+            sophie@market-academy.com
+          </a>
+        </p>
+
+        <p
+          style="
+            box-sizing: border-box;
+            margin: 0px 0px 4px;
+            padding: 0px;
+            font-size: 10pt;
+            line-height: 12pt;
+          "
+        >
+          <img
+            src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
+            alt="icone curseur"
+            width="14"
+            style="width: 14px; vertical-align: middle; margin-right: 2px"
+          />
+          <a
+            href="https://www.market-academy.com"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(54, 64, 67);
+              text-decoration-line: none;
+              font-size: 10pt;
+            "
+          >
+            www.market-academy.com
+          </a>
+        </p>
+
+        <p style="box-sizing: border-box; margin: 10px 0px 6px; padding: 0px">
+          <a
+            href="https://www.market-academy.com"
+            target="_blank"
+            style="
+              box-sizing: border-box;
+              background-color: transparent;
+              color: rgb(51, 122, 183);
+              text-decoration-line: none;
+            "
+          >
+            <img
+              border="0"
+              alt="Logo"
+              width="140"
+              src="https://drive.google.com/uc?id=133ygwtc500dywc_HDwUWwzap6ofqlRV5"
+              style="
+                box-sizing: border-box;
+                border: 0px;
+                vertical-align: middle;
+                width: 140px;
+                height: auto;
+              "
+            />
+          </a>
+        </p>
+        <p style="box-sizing: border-box; margin: 0px 0px 14px"></p>
+      </td>
+    </tr>
+  </tbody>
+</table>
