--- a/src/guillaume.html
+++ b/src/guillaume.html
@@ -64,7 +64,7 @@
               line-height: 34px;
             "
           >
-            Sophie ROCCO
+            Guillaume SANCHEZ
           </span>
           <br style="box-sizing: border-box" />
           <span
@@ -76,7 +76,7 @@
               /* border-bottom: solid 2px rgb(67, 128, 148); */
             "
           >
-            Marketing &amp; Project Director
+            CEO &amp; Digital Architect
           </span>
         </p>
 
@@ -124,7 +124,7 @@
             width="11"
             style="width: 11px; vertical-align: middle; margin-right: 2px"
           />
-          0972373780 - 0626643202
+          0972373780 - 0613562123
         </p>
         <p
           style="
