--- a/src/sophie.html
+++ b/src/sophie.html
@@ -33,7 +33,7 @@
             alt="photograph"
             width="130"
             border="0"
-            src="https://drive.google.com/uc?id=1hZjqTMmyzwCgyZgXcLsVYvqTkvS5xvDE"
+            src="https://static.wixstatic.com/media/4a8972_1860a91ec5974befbfe715a5e7905595~mv2.png"
             style="
               box-sizing: border-box;
               border: 0px;
@@ -119,7 +119,7 @@
           "
         >
           <img
-            src="https://drive.google.com/uc?id=1BfvyejVNNULjwOiw8sySdpkTewNZVJ8e"
+            src="https://static.wixstatic.com/media/4a8972_d1d0bd2e04f944c69599986ea3d71aff~mv2.png"
             alt="icone téléphone"
             width="11"
             style="width: 11px; vertical-align: middle; margin-right: 2px"
@@ -136,7 +136,7 @@
           "
         >
           <img
-            src="https://drive.google.com/uc?id=1DSzB9rmYJtwAdKEOBB5d9F2_h4NQ4r2v"
+            src="https://static.wixstatic.com/media/4a8972_2c709e1a39e545fbb7ab87551f3de465~mv2.png"
             alt="icone curseur"
             width="12"
             style="width: 12px; vertical-align: middle; margin-right: 2px"
